# lemon_engine_bench

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: generate_plots.py  run_all.py
setup/: download_models.sh  health_check.py  install_all.sh  install_huggingface.sh  install_lemonade.sh  install_llamacpp.sh  install_sglang.sh  install_vllm.sh  launch_lemonade.sh  launch_llamacpp.sh  launch_sglang.sh  launch_vllm.sh  register_models.py
src/: config.py
src/analysis/: metrics.py
src/data/: loader.py  prompts.py
src/engines/: __init__.py  base.py  factory.py  huggingface.py  lemonade_engine.py  llamacpp_engine.py  sglang_engine.py  token_utils.py  vllm_engine.py
src/experiments/: distribution.py  greedy_decode.py  perplexity.py
